# ffmpeg-project

./: CMakeLists.txt  readme.md
archive/mediascrub/: analyze.sh  scrub.sh
archive/mediascrub/calc/: hevc_stream_analysis.ods
cmake/: FindFFmpeg.cmake
cpp/: CMakeLists.txt
cpp/probe-video/: CMakeLists.txt  main.cpp
python/: ffprobe.py
